--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,10 +1,102 @@
-.profile {
-  display: block;
-  margin: auto;
-  width: 200px;
+.container {
+  width: 800px;
 }
 
-.title {
-  font-size: 26px;
+.blog-content {
+  width: 80%;
+  height: 200px;
+  float: left;
+}
+
+.blog-image {
+  width: 20%;
+  height: 200px;
+  float: left;
+}
+
+.blog-profile {
+  float: left;
+  margin: 10px;
+}
+
+.blog-pic {
+  float: left;
+}
+
+.blog-title {
+  clear: both;
+}
+
+.li-inline li {
+  display: inline-block;
+  width: 100px;
   text-align: center;
 }
+
+.li-inline a {
+  text-decoration: none;
+}
+
+.li-inline a:visited {
+  color: black;
+}
+
+.navbar {
+  width: 800px;
+  margin: auto;
+}
+
+/* .container {
+  width: 800px;
+}
+
+.header {
+  width: 80%;
+  height: 50px;
+  background-color: gold;
+}
+
+.left {
+  width: 80%;
+  height: 200px;
+  background-color: grey;
+  float: left;
+}
+
+.right {
+  width: 20%;
+  height: 200px;
+  background-color: coral;
+  float: left;
+} */
+
+/* .container {
+  width: 800px;
+}
+
+.header {
+  width: 100%;
+  height: 50px;
+  background-color: blanchedalmond;
+}
+
+.left {
+  width: 20%;
+  height: 500px;
+  background-color: cadetblue;
+  float: left;
+}
+
+.right {
+  width: 80%;
+  height: 500px;
+  background-color: chartreuse;
+  float: left;
+}
+
+.footer {
+  width: 100%;
+  height: 50px;
+  background-color: cyan;
+  clear: both;
+} */
