--- a/CSS/layout3_main.css
+++ b/CSS/layout3_main.css
@@ -31,7 +31,6 @@ p {
 
 .main-title {
   color: white;
-  font-size: 30px;
 }
 
 .main-content {
@@ -107,4 +106,39 @@ textarea {
   font-size: 18px;
   width: 50%;
   float: right;
+}
+
+.explanin-container {
+  text-align: center;
+  margin: auto;
+  margin-top: 70px;
+  max-width: 1200px;
+}
+
+.explanin-container div {
+  margin-top: 30px;
+  float: left;
+  width: 25%;
+}
+
+@media screen and (max-width: 992px) {
+  .main-title {
+    font-size: 40px;
+  }
+  .explanin-container {
+    max-width: 800px;
+  }
+  .explanin-container div {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .main-title {
+    font-size: 40px;
+  }
+  .explanin-container div {
+    float: none;
+    width: 100%;
+  }
 }
